# This section defines the build requirements.
[build-system]
# Necessary packages for the build system.
requires = ["setuptools", "wheel"]
# Backend of the build system.
build-backend = "setuptools.build_meta"

# This section is used to configure Black, a Python code formatter.
[tool.black]
# Extend Black's default exclusion list to ignore certain files and directories.
# Exclude directories that contain Swagger generated code.
extend-exclude = """
(
src/scripts/api_cache
| src/ebay_rest/api/
)
"""
