# This section defines the build requirements.
[build-system]
# Necessary packages for the build system.
requires = ["setuptools", "wheel"]
# Backend of the build system.
build-backend = "setuptools.build_meta"

# Metadata about your package.
[project]
name = "ebay_rest"
version = "1.0.6"
license = {text = "MIT"}
authors = [
    {name = "Peter JOHN Matecsa", email = "matecsaj@gmail.com"}
]
description = "Wraps the eBay REST APIs."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ebay", "api", "rest"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Internet"
]
dependencies = ["certifi", "cryptography", "python_dateutil", "requests", "six", "urllib3"]

[project.urls]
Homepage = "https://github.com/matecsaj/ebay_rest"
Repository = "https://github.com/matecsaj/ebay_rest.git"
Issues = "https://github.com/matecsaj/ebay_rest/issues"

# Options for building and distributing the package.
[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
include-package-data = true

# Optional dependencies.
[project.optional-dependencies]
complete = ["playwright"]
dev = [
    "aiofiles",
    "aiohttp",
    "black",
    "bs4",
    "build",
    "CurrencyConverter",
    "pipreqs",
    "setuptools",
    "twine",
    "wheel"
]

# Package data to include.
[tool.setuptools.package-data]
"ebay_rest" = ["references/*.json"]

# This section is used to configure Black, a Python code formatter.
[tool.black]
# Extend Black's default exclusion list to ignore certain files and directories.
# Exclude directories that contain Swagger generated code.
extend-exclude = """
(
src/scripts/api_cache
| src/ebay_rest/api/
)
"""
