# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = ebay_rest
version = 0.0.34
license = MIT
author = Peter JOHN Matecsa
author_email = matecsaj@gmail.com
description = Wraps the eBay REST APIs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matecsaj/ebay_rest
project_urls =
    Bug Tracker = https://github.com/matecsaj/ebay_rest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Internet

[options]
include_package_data = True
install_requires =
    certifi
    cryptography
    python_dateutil
    requests
    six
    urllib3

package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.extras_require]
complete =
    selenium

[options.package_data]
ebay_rest = references/*.json

[options.packages.find]
where = src
