# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

# When choosing a version number, follow Semantic Versioning, https://en.wikipedia.org/wiki/Software_versioning:
# version = X.Y.Z where:
# X is the major version,
# Y is the minor version, and
# Z is the patch.
# When changes are made, increment the appropriate number based on the type of change:
# Major changes (e.g., backward-incompatible changes) increment X.
# Minor changes (e.g., addition of features in a backward-compatible manner) increment Y.
# Patch changes (e.g., backward-compatible bug fixes) increment Z.

[metadata]
name = ebay_rest
version = 1.0.3
license = MIT
author = Peter JOHN Matecsa
author_email = matecsaj@gmail.com
description = Wraps the eBay REST APIs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matecsaj/ebay_rest
project_urls =
    Bug Tracker = https://github.com/matecsaj/ebay_rest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Internet

[options]
include_package_data = True
install_requires =
    certifi
    cryptography
    python_dateutil
    requests
    six
    urllib3

package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.extras_require]
complete =
    playwright

[options.package_data]
ebay_rest = references/*.json

[options.packages.find]
where = src